--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     padding-top: 40px;
-    background-color: #ffffff;
+    background-color: #f4f4f4;
   }
   .container {
     background: white;
