--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -74,8 +74,8 @@
 <label><input type="radio" name="dir" value="R"> Right</label><br><br>
 
 <button onclick="generate()">Generate Name</button>
-<button onclick="copyToClipboard()">Copy to Clipboard</button>
-<p><span id="output"></span></p>
+<!--<button onclick="copyToClipboard()">Copy to Clipboard</button>-->
+<span id="output"></span>
 </div>
 
 <script>
@@ -105,13 +105,13 @@ function generate() {
   document.getElementById('output').innerText = parts.join('_');
 }
 
-function copyToClipboard() {
-  const text = document.getElementById('output').innerText;
-  if (!text) return;
-  navigator.clipboard.writeText(text).then(() => {
-    alert("Copied to clipboard: " + text);
-  });
-}
+//function copyToClipboard() {
+//  const text = document.getElementById('output').innerText;
+//  if (!text) return;
+//  navigator.clipboard.writeText(text).then(() => {
+//    alert("Copied to clipboard: " + text);
+//  });
+//}
 </script>
 </body>
 </html>
