--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -33,7 +33,6 @@
     color: white;
     border: none;
     padding: 10px 18px;
-    margin: 10px 5px;
     border-radius: 5px;
     cursor: pointer;
   }
@@ -42,8 +41,8 @@
   }
   #output {
     font-weight: bold;
-    font-size: 18px;
-    margin-top: 15px;
+    font-size: 15px;
+    margin-top: 10px;
     display: inline-block;
   }
 </style>
@@ -63,12 +62,12 @@
 <label>Dosing units:</label> <input type="number" id="d" min="0" value="0">
 <label>Ultrasonics:</label> <input type="number" id="u" min="0" value="0">
 <label><input type="checkbox" id="ph"> pH Measurement</label>
-<label><input type="checkbox" id="co"> Condy Measurement</label>
+<label><input type="checkbox" id="co"> Conductivity Measurement</label>
 <label><input type="checkbox" id="ec"> Exhaust Condenser</label>
 
 <p>Direction:</p>
 <label><input type="radio" name="dir" value="L" checked> Left</label>
-<label><input type="radio" name="dir" value="R"> Right</label><br><br>
+<label><input type="radio" name="dir" value="R"> Right</label><br>
 
 <button onclick="generate()">Generate Name</button>
 <!--<button onclick="copyToClipboard()">Copy to Clipboard</button>-->
