--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -51,6 +51,10 @@
 <div class="container">
 <h2>Control Panel Name Generator</h2>
 
+<p>Design style:</p>
+<label><input type="radio" name="style" value="ML" checked> Military</label>
+<label><input type="radio" name="style" value="NG"> NGU</label>
+<p>Module type:</p>
 <label><input type="radio" name="module" value="Module" checked> Active module</label>
 <label><input type="radio" name="module" value="Rinse"> Rinse module</label>
 
@@ -76,6 +80,7 @@
 
 <script>
 function generate() {
+  const style = document.querySelector('input[name="style"]:checked').value;
   const module = document.querySelector('input[name="module"]:checked').value;
   const pumps = document.getElementById('pumps').value.toUpperCase().replace(/[^PCVS]/g, '');
   const f = parseInt(document.getElementById('f').value);
@@ -87,7 +92,8 @@ function generate() {
   const ec = document.getElementById('ec').checked;
   const dir = document.querySelector('input[name="dir"]:checked').value;
 
-  let parts = [module];
+  let parts = [style];
+  parts.push(module);
   if (pumps) parts.push(pumps.length + pumps);
   if (f > 0) parts.push(f + 'F');
   if (fp) parts.push('FP');
