--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -62,7 +62,7 @@
 <input type="text" id="pumps" placeholder="PPCP"><br>
 
 <label>Frequency inverters:</label> <input type="number" id="f" min="0" value="0">
-<label><input type="checkbox" id="fp"> FP (Pump filter pressure)</label>
+<label><input type="checkbox" id="fp"> Pump filter pressure</label>
 <label>Dosing units:</label> <input type="number" id="d" min="0" value="0">
 <label>Ultrasonics:</label> <input type="number" id="u" min="0" value="0">
 <label><input type="checkbox" id="ph"> pH Measurement</label>
