--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -58,9 +58,7 @@
 <label><input type="radio" name="module" value="Module" checked> Active module</label>
 <label><input type="radio" name="module" value="Rinse"> Rinse module</label>
 <label><input type="checkbox" id="b"> Bath level control</label>
-<p>Pump number and order (Example: 2PP, 4PPCP):</p>
-<input type="text" id="pumps" placeholder="PPCP">
-
+<label>Pumps number:</label> <input type="number" id="p" min="0" value="0">
 <label>Frequency inverters:</label> <input type="number" id="f" min="0" value="0">
 <label><input type="checkbox" id="fp"> Pump filter pressure</label>
 <label>Dosing units:</label> <input type="number" id="d" min="0" value="0">
@@ -83,7 +81,7 @@ function generate() {
   const style = document.querySelector('input[name="style"]:checked').value;
   const module = document.querySelector('input[name="module"]:checked').value;
   const b = document.getElementById('b').checked;
-  const pumps = parseInt(document.getElementById('p').value);
+  const p = parseInt(document.getElementById('p').value);
   const f = parseInt(document.getElementById('f').value);
   const fp = document.getElementById('fp').checked;
   const d = parseInt(document.getElementById('d').value);
@@ -96,7 +94,7 @@ function generate() {
   let parts = [style];
   parts.push(module);
   if (b) parts.push('B');
-  if (pumps) parts.push(pumps + 'P');
+  if (p) parts.push(p + 'P');
   if (f > 0) parts.push(f + 'F');
   if (fp) parts.push('FP');
   if (d > 0) parts.push(d + 'D');
