--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -57,6 +57,9 @@
 <p>Module type:</p>
 <label><input type="radio" name="module" value="Module" checked> Active module</label>
 <label><input type="radio" name="module" value="Rinse"> Rinse module</label>
+<label><input type="radio" name="module" value="Permanganate"> Permanganate module</label>
+<label><input type="radio" name="module" value="Eless"> Eless module</label>
+<label><input type="radio" name="module" value="Galvano"> Galvano module</label>
 <label><input type="checkbox" id="b"> Bath level control</label>
 <label>Pumps number:</label> <input type="number" id="p" min="0" value="0">
 <label>Frequency inverters:</label> <input type="number" id="f" min="0" value="0">
