--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -71,8 +71,8 @@
 <label><input type="checkbox" id="ec"> Exhaust Condenser</label>
 
 <p>Rectifiers type:</p>
-<label><input type="checkbox" id="kr"> KRAFT</label>
-<label><input type="checkbox" id="pe"> PE</label>
+<label><input type="checkbox" id="kr" onclick="toggleRectifier(kr)"> KRAFT</label>
+<label><input type="checkbox" id="pe" onclick="toggleRectifier(pe)"> PE</label>
 
 <p>Direction:</p>
 <label><input type="radio" name="dir" value="L" checked> Left</label>
